apps/oneuptime/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oneuptime
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: oneuptime
    homelab.local/OwnedBy: ElPoshoX
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
