apps/oneuptime/base/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oneuptime
  namespace: oneuptime
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: ingress
  hostnames:
    - uptime.elposhox.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oneuptime-nginx
          port: 80
